--- a/prwd.1
+++ b/prwd.1
@@ -24,8 +24,11 @@
 .Sh DESCRIPTION
 .Nm
 is a replacement for your shell's PS1, it provides a simple templating language
-and a number of commands to customize your shell prompt and share it across all
-your shells.
+with commands to customize your prompt.
+.Nm
+keeps your prompt consistent between shells, provides fast template commands to
+display contextual information such as hostname, path, current git/hg branch
+without an inordinate amount of slow shell scripting.
 .Pp
 The command-line options are as follows:
 .Bl -tag -width Ds
