Update TODO as well.

--- a/prwdrc.5
+++ b/prwdrc.5
@@ -176,6 +176,7 @@ Then use your aliases like any environment variable:
 .Bd -literal -offset indent
 cd $py3k
 .Ed
+Note that ~ is a default alias for prwd.
 .Sh GLOBAL SETTINGS
 Settings are defined with the
 .Em set
