Fix nested aliases
Regression found by @twidi, fixes #8.

--- a/prwdrc.5
+++ b/prwdrc.5
@@ -155,8 +155,7 @@ alias *prwd /home/tamentis/projects/prwd
 alias *prwd /Users/tamentis/projects/prwd
 .Ed
 .Pp
-Aliases can be nested one level deep if you have a complicated directory
-hierarchy.
+Aliases can be nested if you have a complicated directory hierarchy.
 .Bd -literal -offset indent
 alias *prwd /home/tamentis/projects/prwd
 alias *prwddoc *prwd/doc
