--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1.9.1 Bertrand Janin <b@janin.com> (2015-05-20)
+
+	* Fix newsgroup mode not using aliases (found by @twidi, fixes #7).
+	* Fix broken nested aliases (found by @twidi, fixes #8).
+
 1.9 Bertrand Janin <b@janin.com> (2015-04-12)
 
 	* Implemented fully templated mode.  All older options are obsolete
